# pocketbook-apps

Notepad/: CMakeLists.txt  docker.sh
Notepad/src/: .#Notepad.c  Notepad.c  spinner.c  spinner.h  ui.c  ui.h  utilities.h
Notepad/src/ui/: base.c  base.h  constants.h  notepad.c  notepad.h  spinner.c  spinner.h  switch.c  switch.h
notepad/: CMakeLists.txt  main.c
notepad/src/: event.c  event.h  notepad.h  ui.c  ui.h  utilities.h
